Removed extra csv field

--- a/views/pages/reports/awbreport.ejs
+++ b/views/pages/reports/awbreport.ejs
@@ -267,9 +267,9 @@ var endate = new Date();
         <th>Carrier</th>
         <th>Invoice Count</th>
         <th>Package Count</th>
-        <th>View more</th>
+        <!-- <th>View more</th>
         <th></th>
-        <th></th>
+        <th></th> -->
       </tr>
     </thead>
     <tbody>
@@ -286,27 +286,27 @@ var endate = new Date();
       <td><%=awb.carrierName?awb.carrierName:'' %></td>
       <td><%=awb.invoices && awb.invoices.length > 0 ? 'yes-doc' : 'no-doc' %></td>
       <td><%=awb.packages ? awb.packages.length : 'no-pkg' %></td>
-      <td>
+      <!-- <td>
         <button class="btn btn-primary btn-view-more-awb btn-round float-right ml-md-auto"
           data-toggle="modal" data-backdrop="static" data-original-title="View More Packages" data-id="<%=awb._id%>"
           data-target="#more-awb-details">View</button>
-      </td>
+      </td> -->
       <!-- <td><% if(awb.invoice) { %>
           <a class="btn btn-link btn-primary btn-invoice" data-id="<%=awb.invoice%>" data-toggle="tooltip"
             data-original-title="Invoice Attached"> <i class="fa fa-paperclip"></i> </a>
           <% } %>
         </td> -->
-      <td class="text-center">
+      <!-- <td class="text-center">
         <a href='/warehouse/fll/awb/manage/<%=awb._id%>/get' class="btn btn-link btn-primary px-1"
-          data-toggle="tooltip" data-original-title="Edit"> <i class="fa fa-pen"></i> </a>
+          data-toggle="tooltip" data-original-title="Edit"> <i class="fa fa-pen"></i> </a> -->
         <!-- temporary commenting the code -->
         <!-- <a class="btn btn-link btn-danger btn-rm-awb p-1" data-toggle="modal" data-id="<%=awb._id%>"
             data-target="#confirm-delete-awb"> <i class="fa fa-trash"></i> </a> -->
-      </td>
+      <!-- </td>
       <td>
         <a class="btn btn-link btn-primary btn-print-awb p-1" data-id="<%=awb._id%>"
           data-target="#print-popup"> <i class="fa fa-print"></i> </a>
-      </td>
+      </td> -->
       </tr>
       <%})%>
       </tbody>
