--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -7,6 +7,8 @@
 				<div class="info">
 					<a data-toggle="collapse" href="#userCollapse" aria-expanded="true">
 						<span>
+	
+
 							<span class="user-level"><%=user.firstName + ' ' + user.lastName%></span>
 							<span class="user-level">
 								<% if (user.roles[0].type != "Customers") { %>
@@ -15,6 +17,7 @@
 								<% if (user.roles[0].type == "Customers") { %>
 								Customer
 								<% } %> 
+								<%= user.roles[0].type %>
 							</span>
 						</span>
 					</a>
@@ -235,6 +238,35 @@
 						<p>Upload Invoice </p>
 					</a>
 				</li>
+				<li class="nav-item <% if (page.includes('/reports/')) { %> active <% } %>">
+					<a data-toggle="collapse" href="#myreport">
+						<i class="fas fa-user"></i>
+						<p>Reports</p>
+						<span class="caret"></span>
+					</a>
+					<div class="collapse <% if (page.includes('/customer/report/package-report')) { %> show <% } %>" id="myreport">
+						<ul class="nav nav-collapse">
+							<% if (user.roles[0].type == "Customers") { %>
+							<li <% if (page.includes('/profile')) { %> class="active" <% } %>>
+								<a href="/customer/report/package-report">
+									<span class="sub-item">Package Report</span>
+								</a>
+							</li>
+							
+							<% } %>
+						
+							<!-- Temporary hide the print section -->
+							<!-- <li <% if (page.includes('/account/change-printer')) { %> class="active" <% } %>>
+								<a href="/account/change-printer">
+									<span class="sub-item">Printer</span>
+								</a>
+							</li> -->
+						</ul>
+					</div>
+					
+				</li>
+				
+
 				<!-- <li class="nav-item <% if (page.includes('/upload')) { %> active <% } %>">
 					<a href="/customer/billing">
 						<i class="fa fa-file-invoice-dollar"></i>
