customer portal changes

--- a/views/pages/reports/customerpackagereport.ejs
+++ b/views/pages/reports/customerpackagereport.ejs
@@ -152,7 +152,7 @@ var endate = new Date();
                 <td><%=(pkg.trackingNo)?pkg.trackingNo:''%></td>
                 <!-- <td><%= pkg.pmb %></td> -->
                 <!-- <td><%= pkg.customerFullName %></td> -->
-                <td><a href="/warehouse/fll/awb/manage/<%=pkg.awbId%>/preview"><%=pkg.awbIdNumber%></a></td>
+                <td><a href="/customer/awb/<%=pkg.awbId%>/preview"><%=pkg.awbIdNumber%></a></td>
                 <td><%= pkg.shipperName %></td>
                 <!-- <td><%= pkg.storeLocation ?pkg.storeLocation : '9to5' %></td> -->
                 <!-- <td><%= pkg.barcode %></td> -->
