--- a/views/pages/customerUploadInvoices.ejs
+++ b/views/pages/customerUploadInvoices.ejs
@@ -48,11 +48,16 @@
                 </th>
                
                 <th>Actions</th>
+                <th>  Additional Invoices Count
+                </th>
               </tr>
             </thead>
             <tbody>
+              <% var i = 0 %>
+              <!-- <% console.log(adInvoice,  "                end                  " ,awbs[0]) %> -->
               <% awbs.forEach(function(pkg){ %>
               <tr data-record="<%= pkg._id %>">
+      
                
                 <td><%= helpers.formatDate(pkg.createdAt) %></td>
                 <td>
@@ -67,7 +72,23 @@
                   <a href="javascript:void(0)" onclick="showUploadInvoiceModal('<%-pkg._id%>')" class="btn btn-link btn-primary px-3" data-toggle="tooltip"
                     data-original-title="View Details"> <i class="fas fa-upload"></i></a>
               </td> 
+            </td>
+            
 
+  <%   
+    for(var j =0;j<pkg.customerId.awb.length;j++){
+    console.log(awbscountdata[i].awbid.toString() ,"----", pkg.customerId.awb[j].toString() ,"hellllss" )
+    if(awbscountdata[i].awbid.toString() == pkg.customerId.awb[j].toString()  ){ %>
+
+      <td><%= awbscountdata[i].count %></td>
+       
+      <%  }  %>
+    
+
+      <% }  %>
+          
+          </tr>
+<% i++; %>
               </tr>
               <%})%>
             </tbody>
