--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -91,8 +91,15 @@
 						<span class="sub-item">Package Report </span>
 					</a>
 				</li>
+				<!-- <li class="nav-item <% if (page.includes('/reports/nodocsreport')) { %> active <% } %>">
+					<a href="/reports/nodocsreport"> -->
+						<!-- <i class="fa fa-file"></i> -->
+						<!-- <span class="sub-item">No Docs Package Report </span>
+					</a>
+				</li> -->
+				
 				<li class="nav-item <% if (page.includes('/reports/nodocsreport')) { %> active <% } %>">
-					<a href="/reports/nodocsreport">
+					<a href="/reports/package/list?nodocs=load">
 						<!-- <i class="fa fa-file"></i> -->
 						<span class="sub-item">No Docs Package Report </span>
 					</a>
