--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -239,21 +239,21 @@
 					</a>
 				</li>
 				<li class="nav-item <% if (page.includes('/reports/')) { %> active <% } %>">
-					<a data-toggle="collapse" href="#myreport">
-						<i class="fas fa-user"></i>
+					<!-- <a data-toggle="collapse" href="#myreport">
 						<p>Reports</p>
 						<span class="caret"></span>
 					</a>
 					<div class="collapse <% if (page.includes('/customer/report/package-report')) { %> show <% } %>" id="myreport">
 						<ul class="nav nav-collapse">
 							<% if (user.roles[0].type == "Customers") { %>
-							<li <% if (page.includes('/profile')) { %> class="active" <% } %>>
+							<li <% if (page.includes('/profile')) { %> class="active" <% } %>> -->
 								<a href="/customer/report/package-report">
-									<span class="sub-item">Package Report</span>
+									<i class="fas fa-list"></i>
+									<p>Package Report</p>
 								</a>
-							</li>
+							<!-- </li>
 							
-							<% } %>
+							<% } %> -->
 						
 							<!-- Temporary hide the print section -->
 							<!-- <li <% if (page.includes('/account/change-printer')) { %> class="active" <% } %>>
@@ -261,8 +261,8 @@
 									<span class="sub-item">Printer</span>
 								</a>
 							</li> -->
-						</ul>
-					</div>
+						<!-- </ul>
+					</div> -->
 					
 				</li>
 				
