--- a/views/pages/reports/customerpackagereport.ejs
+++ b/views/pages/reports/customerpackagereport.ejs
@@ -35,13 +35,13 @@ var endate = new Date();
       <!-- <a href="#" onclick="download_table_as_csv('package-table');">Download as CSV</a> -->
 
       <div class="card-header d-flex align-items-left align-items-md-center flex-column flex-md-row">
-        <div class="card-title"> Package Report</div>
+        <div class="card-title"> Packages</div>
       
         <div class="d-flex align-items-right float-right ml-md-auto">
-          <button 
+          <!-- <button 
             class="btn btn-primary btn-round float-right mr-2 ml-md-auto" onclick="download_table_as_csv('package-table-download');">
           Generate CSV
-          </button>
+          </button> -->
       
         </div>
       </div>
