--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -249,7 +249,7 @@
 							<li <% if (page.includes('/profile')) { %> class="active" <% } %>> -->
 								<a href="/customer/report/package-report">
 									<i class="fas fa-list"></i>
-									<p>Package Report</p>
+									<p>Packages</p>
 								</a>
 							<!-- </li>
 							
