--- a/views/pages/reports/nodocsreport.ejs
+++ b/views/pages/reports/nodocsreport.ejs
@@ -41,7 +41,7 @@ var endate = new Date();
         -->
           <button  onclick="download_table_as_csv('package-table-download')"
             class="btn btn-primary btn-round float-right mr-2 ml-md-auto">
-            Generate CSV
+            <i class="fa fa-download"></i>   Generate CSV
           </button>
          <!-- <button id="add-to-nodoc-button" data-toggle="modal" data-backdrop="static" data-target="#add-to-nodoc-modal"
             class="btn btn-primary btn-round float-right mr-2 ml-md-auto">
