--- a/views/pages/reports/awbreport-by-employees.ejs
+++ b/views/pages/reports/awbreport-by-employees.ejs
@@ -17,8 +17,12 @@ var endate = new Date();
     <div class='card card-with-nav'>
       <div class="card-header">
         <div class="row row-nav-line">
+          <button 
+          class="btn btn-primary btn-round float-right mr-2 ml-md-auto"  onclick="download_table_as_csv('awb-report-table-download')">
+          <i class="fa fa-download"></i>     Generate CSV
+        </button>
           <ul class="nav nav-tabs nav-line nav-color-primary" id="awb-list-tab" role="tablist">
-            <!-- <input type="button" value="Generate CSV" class="btn btn-primary" style="float: left;margin-left: 1%"  onclick="gen_awb_report()"> -->
+            <!-- <input type="button" value="Generate CSV" class="btn btn-primary" style="float: left;margin-left: 1%"  onclick="download_table_as_csv('awb-report-table-download')"> -->
 
           </ul>
         </div>
@@ -38,8 +42,8 @@ var endate = new Date();
               <select name="search_type" id="search_type"  class="form-control" style="width: 30%; float: left;">
                   <option value="">Select </option>
                   <option value="AWBNUMBER" <%if(query.search_type=='AWBNUMBER'){%>selected<%}%>>AWB # </option>
-                  <option value="CONSIGNEE" <%if(query.search_type=='CONSIGNEE'){%>selected<%}%>>Consignee </option>
-                  <option value="SHIPPER" <%if(query.search_type=='SHIPPER'){%>selected<%}%>>Shipper </option>
+                  <!-- <option value="CONSIGNEE" <%if(query.search_type=='CONSIGNEE'){%>selected<%}%>>Consignee </option>
+                  <option value="SHIPPER" <%if(query.search_type=='SHIPPER'){%>selected<%}%>>Shipper </option> -->
               </select>
               <input type="text" name="search_text" id="search_text" class="form-control" value="<%=query.search_text%>" style="width: 30%; float: left;margin-left: 1%;"">
               <input type="submit" value="Filter" class="btn btn-primary" style="margin-left: 1%;" onclick="searchDataFilter()">
@@ -177,3 +181,70 @@ var endate = new Date();
 <% block('scripts').append('<script src="/js/warehouse/snapshot/awb/list-employees.js"></script>')%>
 <% block('scripts').append('<script src="/js/reports/report.js"></script>')%>
  
+
+<script>
+  function download_table_as_csv(table_id, separator = ',') {
+    // Select rows from table_id
+    var rows = document.querySelectorAll('table#' + table_id + ' tr');
+    // Construct csv
+    var csv = [];
+    for (var i = 0; i < rows.length; i++) {
+        var row = [], cols = rows[i].querySelectorAll('td, th');
+        for (var j = 0; j < cols.length; j++) {
+            // Clean innertext to remove multiple spaces and jumpline (break csv)
+            var data = cols[j].innerText.replace(/(\r\n|\n|\r)/gm, '').replace(/(\s\s)/gm, ' ')
+            // Escape double-quote with double-double-quote (see https://stackoverflow.com/questions/17808511/properly-escape-a-double-quote-in-csv)
+            data = data.replace(/"/g, '""');
+            // Push escaped string
+            row.push('"' + data + '"');
+        }
+        csv.push(row.join(separator));
+    }
+    var csv_string = csv.join('\n');
+    // Download it
+    var filename = 'export_' + table_id + '_' + new Date().toLocaleDateString() + '.csv';
+    var link = document.createElement('a');
+    link.style.display = 'none';
+    link.setAttribute('target', '_blank');
+    link.setAttribute('href', 'data:text/csv;charset=utf-8,' + encodeURIComponent(csv_string));
+    link.setAttribute('download', filename);
+    document.body.appendChild(link);
+    link.click();
+    document.body.removeChild(link);
+}
+</script>
+
+
+
+
+<div style="display: none;">
+  <table id='awb-report-table-download' >
+    <thead>
+      <tr>
+        <th>Date Received</th>
+        <th>AWB Number</th>
+        <th>Status</th>
+        <th>Name</th>
+        <th>Email</th>
+       
+      </tr>
+    </thead>
+    <tbody>
+      <% 
+      awbs.forEach(function(awb){
+      %>
+      <tr data-record=" <%= awb._id %>">
+      <td><%=helpers.formatDate(awb.createdAt)%></td>
+      <td><a href="/warehouse/fll/awb/manage/<%=awb._id%>/preview"><%=awb.awbId%></a></td>
+      <td><%=awb.status %></td>
+      <td><%=awb.customerFullName %></td>
+      <td><%=awb.customerId?awb.customerId.email:null  %></td>
+     
+     
+      </tr>
+      <%})%>
+      </tbody>
+      </table>
+    <!-- </div>
+</div> -->
+</div>
