--- a/views/pages/reports/awbreport.ejs
+++ b/views/pages/reports/awbreport.ejs
@@ -20,7 +20,7 @@ var endate = new Date();
           <ul class="nav nav-tabs nav-line nav-color-primary" id="awb-list-tab" role="tablist">
             <button onclick="download_table_as_csv('awb-report-table-download')" 
             class="btn btn-primary btn-round float-right mr-2 ml-md-auto">
-                  Generate csv
+            <i class="fa fa-download"></i>  Generate csv
             </button>
             <!-- <button value="" class="btn btn-primary" style="float: right;margin-left: 1%"  onclick="download_table_as_csv('awb-report-table-download')">Generate CSV Awb report </button> -->
 
