--- a/views/pages/reports/package-report.ejs
+++ b/views/pages/reports/package-report.ejs
@@ -39,7 +39,7 @@ var endate = new Date();
         <div class="d-flex align-items-right float-right ml-md-auto">
           <button 
             class="btn btn-primary btn-round float-right mr-2 ml-md-auto" onclick="download_table_as_csv('package-table-download');">
-            Generate CSV
+            <i class="fa fa-download"></i>  Generate CSV
           </button>
       
         </div>
