--- a/views/pages/reports/awbreport-by-employees.ejs
+++ b/views/pages/reports/awbreport-by-employees.ejs
@@ -18,7 +18,7 @@ var endate = new Date();
       <div class="card-header">
         <div class="row row-nav-line">
           <button 
-          class="btn btn-primary btn-round float-right mr-2 ml-md-auto"  onclick="download_table_as_csv('awb-report-table-download')">
+          class="btn btn-primary btn-round float-right mt-2 mr-2 ml-md-auto"  onclick="download_table_as_csv('awb-report-table-download')">
           <i class="fa fa-download"></i>     Generate CSV
         </button>
           <ul class="nav nav-tabs nav-line nav-color-primary" id="awb-list-tab" role="tablist">
