--- a/views/pages/reports/nodocsreport.ejs
+++ b/views/pages/reports/nodocsreport.ejs
@@ -40,7 +40,7 @@ var endate = new Date();
         <div class="d-flex align-items-right float-right ml-md-auto">
         -->
           <button  onclick="download_table_as_csv('package-table-download')"
-            class="btn btn-primary btn-round float-right mr-2 ml-md-auto">
+            class="btn btn-primary btn-round float-right mt-2 mr-2 ml-md-auto">
             <i class="fa fa-download"></i>   Generate CSV
           </button>
          <!-- <button id="add-to-nodoc-button" data-toggle="modal" data-backdrop="static" data-target="#add-to-nodoc-modal"
