--- a/views/pages/reports/package-status.ejs
+++ b/views/pages/reports/package-status.ejs
@@ -75,7 +75,7 @@ var endate = new Date();
             <div class="row"> 
               <span class="col-md-5 " style="margin-top: 8px;">Select Date</span>  
               <div class="col-md-7"> 
-                <input type="text" class="form-control form-control-sm" name="" id="daterange-package-status-detail" class="form-control" style="float: left; height: 40px !important;" value=""  placeholder="Select dates" > 
+                <input type="text" class="form-control form-control-sm" name="" id="daterange-package-status-detail" class="form-control" style="float: left; height: 40px !important;" value="<%=dateRangeDefault%>"  placeholder="Select dates" > 
               </div>
             </div>  
           </div>
@@ -252,6 +252,7 @@ var endate = new Date();
     dataType: "json",
     type: "GET",
     success: function (data) {
+      console.log(data[1])
       awbsStatus(data[0]);
       packageStatus(data[1]);
       allPackages(data[2])
@@ -278,6 +279,7 @@ var endate = new Date();
     
     $('#daterange-package-status-detail').on('apply.daterangepicker', function (ev, picker) {
     var daterange = picker.startDate.format('MM/DD/YYYY') + ' - ' + picker.endDate.format('MM/DD/YYYY');  
+    console.log(daterange , "drange")
     getAwbdata(daterange,'packageStatus');
     });
     $('#daterange-package-status-detail').on('cancel.daterangepicker', function (ev, picker) {
@@ -324,6 +326,7 @@ var endate = new Date();
   
 
   function getAwbdata(daterange, type){
+    console.log(daterange,type , "daterangetype")
     $.ajax({
       url: '/api/warehouse/get_packages_data/all?type='+type+'&daterange='+daterange,
       dataType: "json",
@@ -368,6 +371,7 @@ var endate = new Date();
   }
 
   function packageStatus(data) {
+    console.log(data);
     const PKG_STATUS = {
       0: 'Package Created',
       1: 'Received in FLL',
