--- a/views/pages/reports/awbpackagestatus.ejs
+++ b/views/pages/reports/awbpackagestatus.ejs
@@ -55,7 +55,7 @@ var endate = new Date();
                 <thead>
                   <tr>
                     <th>Created By</th>
-                    <th>Count</th>
+                    <th>AWB Count</th>
 
                     <!-- <th>Date Received</th>
                     <th>AWB Number</th>
