--- a/views/pages/reports/awbreport-by-employees.ejs
+++ b/views/pages/reports/awbreport-by-employees.ejs
@@ -17,6 +17,8 @@ var endate = new Date();
     <div class='card card-with-nav'>
       <div class="card-header">
         <div class="row row-nav-line">
+        <div class="card-title"> &nbsp;&nbsp;&nbsp;AWB Report By Employee</div>
+
           <button 
           class="btn btn-primary btn-round float-right mt-2 mr-2 ml-md-auto"  onclick="download_table_as_csv('awb-report-table-download')">
           <i class="fa fa-download"></i>     Generate CSV
