--- a/views/pages/reports/agingreport.ejs
+++ b/views/pages/reports/agingreport.ejs
@@ -32,9 +32,11 @@ var endate = new Date();
   <div class="col-xl-12 col-lg-6 col-md-12 col-sm-12">
     <div class="card">
       <div class="card-header d-flex align-items-left align-items-md-center flex-column flex-md-row">
-        <div class="card-title"><%= title %></div>
+        <div class="card-title"> &nbsp;&nbsp;&nbsp;Aging Report</div>
+
         
         <div class="d-flex align-items-right float-right ml-md-auto">
+          
           <button 
           class="btn btn-primary btn-round float-right mr-2 ml-md-auto" onclick="download_table_as_csv('package-table-download')">
           <i class="fa fa-download"></i>  Generate CSV
