--- a/views/pages/reports/locationreport.ejs
+++ b/views/pages/reports/locationreport.ejs
@@ -34,7 +34,8 @@ var endate = new Date();
       <!-- <a href="#" onclick="download_table_as_csv('package-table');">Download as CSV</a> -->
 
       <div class="card-header d-flex align-items-left align-items-md-center flex-column flex-md-row">
-        <div class="card-title"><%= title %></div>
+        <div class="card-title"> &nbsp;&nbsp;&nbsp;Location Report</div>
+
       
         <div class="d-flex align-items-right float-right ml-md-auto">
         
