--- a/views/pages/customer/package/list-all.ejs
+++ b/views/pages/customer/package/list-all.ejs
@@ -27,7 +27,7 @@
         data-backdrop="static"
         data-toggle="modal"
         data-target="#add-to-cube-modal"
-        class="btn btn-primary btn-round float-right mr-2 ml-md-auto"
+        class="btn btn-primary btn-round float-right mr-2 ml-md-auto mb-2"
         >
         Add to Cube
         </button>
@@ -36,7 +36,7 @@
         data-toggle="modal"
         data-backdrop="static"
         data-target="#add-to-nodoc-modal"
-        class="btn btn-primary btn-round float-right mr-2 ml-md-auto"
+        class="btn btn-primary btn-round float-right mr-2 ml-md-auto mb-2"
         >
         Add to NoDoc
         </button>
