--- a/views/pages/reports/nodocsreport.ejs
+++ b/views/pages/reports/nodocsreport.ejs
@@ -48,7 +48,7 @@ var endate = new Date();
             <i class="fa fa-download"></i>   Generate CSV
           </button>
          <!-- <button id="add-to-nodoc-button" data-toggle="modal" data-backdrop="static" data-target="#add-to-nodoc-modal"
-            class="btn btn-primary btn-round float-right mr-2 ml-md-auto">
+            class="btn btn-primary btn-round float-right mr-2 ml-md-auto mb-2">
             Add to NoDoc
           </button>
           <% if (buttonName === 'Add to Delivery') { %>
