--- a/views/pages/reports/customerpackagereport.ejs
+++ b/views/pages/reports/customerpackagereport.ejs
@@ -39,7 +39,7 @@ var endate = new Date();
       
         <div class="d-flex align-items-right float-right ml-md-auto">
           <!-- <button 
-            class="btn btn-primary btn-round float-right mr-2 ml-md-auto" onclick="download_table_as_csv('package-table-download');">
+            class="btn btn-primary btn-round float-right mr-2 ml-md-auto mb-2" onclick="download_table_as_csv('package-table-download');">
           Generate CSV
           </button> -->
       
