--- a/views/pages/reports/deliveryreport.ejs
+++ b/views/pages/reports/deliveryreport.ejs
@@ -12,7 +12,7 @@
                 <!-- <input type="button" value="Generate CSV delivery report" class="btn btn-primary" style="float: left;margin-left: 1%"  onclick=" download_table_as_csv('location-download') "> -->
 
                     <button 
-                    class="btn btn-primary btn-round float-right mr-2 ml-md-auto" onclick=" download_table_as_csv('location-download') ">
+                    class="btn btn-primary btn-round float-right mr-2 ml-md-auto mb-2" onclick=" download_table_as_csv('location-download') ">
                     <i class="fa fa-download"></i>  Generate CSV
                   </button>
                 </div>
