--- a/views/pages/reports/package-status-v2.ejs
+++ b/views/pages/reports/package-status-v2.ejs
@@ -38,7 +38,7 @@ var endate = new Date();
       
         <div class="d-flex align-items-right float-right ml-md-auto">
           <button 
-            class="btn btn-primary btn-round float-right mr-2 ml-md-auto" onclick="download_table_as_csv('package-table');">
+            class="btn btn-primary btn-round float-right mr-2 ml-md-auto mb-2" onclick="download_table_as_csv('package-table');">
             <i class="fa fa-download"></i>  Generate CSV
           </button>
       
