--- a/views/pages/warehouse/snapshot/package/list-all.ejs
+++ b/views/pages/warehouse/snapshot/package/list-all.ejs
@@ -37,11 +37,11 @@ var endate = new Date();
         
         <div class="d-flex align-items-right float-right ml-md-auto">
           <button id="add-to-cube-button" data-toggle="modal" data-backdrop="static" data-target="#add-to-cube-modal"
-            class="btn btn-primary btn-round float-right mr-2 ml-md-auto">
+            class="btn btn-primary btn-round float-right mr-2 ml-md-auto mb-2">
             Add to Cube
           </button>
           <button id="add-to-nodoc-button" data-toggle="modal" data-backdrop="static" data-target="#add-to-nodoc-modal"
-            class="btn btn-primary btn-round float-right mr-2 ml-md-auto">
+            class="btn btn-primary btn-round float-right mr-2 ml-md-auto mb-2">
             Add to NoDoc
           </button>
           <% if (buttonName === 'Add to Delivery') { %>
