--- a/views/pages/reports/awbpackagestatus.ejs
+++ b/views/pages/reports/awbpackagestatus.ejs
@@ -17,13 +17,13 @@ var endate = new Date();
     <div class='card card-with-nav'>
       <div class="card-header">
 
-        <div class="row row-nav-line">
+        <div class="card-header row row-nav-line">
           
           <ul class="nav nav-tabs nav-line nav-color-primary" id="awb-list-tab" role="tablist">
         <div class="card-title"> &nbsp;AWB Employee Throughput</div>
 
             <button onclick="download_table_as_csv('awb-report-table-download')" 
-            class="btn btn-primary btn-round float-right mt-2 mr-2 ml-md-auto">
+            class="btn btn-primary btn-round float-right m-2 ml-md-auto">
             <i class="fa fa-download"></i>  Generate CSV
             </button>
             <!-- <button value="" class="btn btn-primary" style="float: right;margin-left: 1%"  onclick="download_table_as_csv('awb-report-table-download')">Generate CSV Awb report </button> -->
