--- a/views/pages/reports/awbreport-by-employees.ejs
+++ b/views/pages/reports/awbreport-by-employees.ejs
@@ -16,11 +16,11 @@ var endate = new Date();
   <div class='col-xl-12 col-lg-6 col-md-12 col-sm-12'>
     <div class='card card-with-nav'>
       <div class="card-header">
-        <div class="row row-nav-line">
+        <div class="m-2 row row-nav-line">
         <div class="card-title"> &nbsp;&nbsp;&nbsp;AWB Report By Employee</div>
 
           <button 
-          class="btn btn-primary btn-round float-right mt-2 mr-2 ml-md-auto"  onclick="download_table_as_csv('awb-report-table-download')">
+          class="btn btn-primary btn-round float-right m-2 ml-md-auto"  onclick="download_table_as_csv('awb-report-table-download')">
           <i class="fa fa-download"></i>     Generate CSV
         </button>
           <ul class="nav nav-tabs nav-line nav-color-primary" id="awb-list-tab" role="tablist">
