--- a/views/pages/reports/awbreport.ejs
+++ b/views/pages/reports/awbreport.ejs
@@ -21,7 +21,7 @@ var endate = new Date();
         <div class="card-title"> &nbsp;&nbsp;&nbsp;AWB Report</div>
 
             <button onclick="download_table_as_csv('awb-report-table-download')" 
-            class="btn btn-primary btn-round float-right mt-2 mr-2 ml-md-auto">
+            class="btn btn-primary btn-round float-right m-2 ml-md-auto">
             <i class="fa fa-download"></i>  Generate CSV
             </button>
             <!-- <button value="" class="btn btn-primary" style="float: right;margin-left: 1%"  onclick="download_table_as_csv('awb-report-table-download')">Generate CSV Awb report </button> -->
